update_collect
cambie los collect a to list